--- a/page3.html
+++ b/page3.html
@@ -66,7 +66,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-13" style="background-image: url(assets/images/thumb-dsc1260-2000x1325.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-13" style="background-image: url(assets/images/thumb-dsc1260-2000x1325.jpg);">
 
     
 
